2002-03-22  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solve.c (iteration): Add checking of the elapsed time.

	* lpkit.[ch] (lp_solve_set_max_time): Wrote.

2002-03-21  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* doc.txt: Removed.

2002-03-20  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* lpkit.[ch] (lp_solve_set_max_iter): Wrote.

	* lpkit.h (_lprec): Added max_total_iter field.

	* solve.c (iteration): Added check for max iterations.
	(milpsolve): Ditto.

2002-03-18  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solve.c (lag_solve): Removed.

	* doc.txt: Added the API documentation from the original package.

2002-03-16  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solve.c (milpsolve): Fixed the failure check.

2002-03-15  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solve.c: Changes related to the enumeration of the solver's
	status type.

2002-03-14  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* lpkit.[ch], solve.c: Fixed the name space bloating.

	* lpkit.c (inc_col_space, inc_row_space): Removed.
	(add_lag_con, get_reduced_costs): Removed.

2002-03-12  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* Makefile.am, solver-lp-api-wrapper.c: Removed.  These things are
	now in src/tools/solver/api.c.

2002-03-11  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* lpkit.c (set_rh_vec): Removed.
	(str_set_rh_vec): Removed.
	(lp_solve_add_constraint): Removed.

2002-03-10  Jody Goldberg <jody@gnome.org>

	* Release 1.1.1

2002-03-09  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver-lp-api-wrapper.c (lp_solve_set_constr_rhs): fixed the
	value type.

	* lpkit.c (str_set_obj_fn): removed.
	(str_add_constraint): removed.
	(del_constraint): removed.
	(str_add_column): removed.
	(del_column): removed.
	(write_LP): removed.
	(print_duals): removed.
	(str_add_lag_con): removed.
	(add_column): removed.
	(get_column): removed.
	(print_scales): removed.

2002-03-07  Morten Welinder  <terra@diku.dk>
