@@ -1,3 +1,25 @@
+/*
+ * solve.c: Simplex algorithm.
+ *
+ * Authors:
+ *   Michel Berkelaar (michel@ics.ele.tue.nl)
+ *   Jeroen Dirks (jeroend@tor.numetrix.com)
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public
+ * License, version 2, as published by the Free Software Foundation.
+ *
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU Library General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
+ * 02111-1307, USA.
+ */
+
 #include <glib.h>
 #include <string.h>
 #include "lpkit.h"
